testing/micro: upgrade to 2.0.0

--- a/testing/micro/APKBUILD
+++ b/testing/micro/APKBUILD
@@ -1,14 +1,15 @@
 # Contributor: Carlo Landmeter <clandmeter@gmail.com>
 # Maintainer:
 pkgname=micro
-pkgver=1.4.1
+pkgver=2.0.0
 pkgrel=0
 # This will need to be updated along with version as it cannot currently be
 # obtained from the tarball, and is necessary if the user is to make error
 # reports upsteam.
-_commithash=1856891622af0e4616288df6207451553622d465
+_commithash=5f6095b0e09b644efb24b58f87b1dda4244e2e8c
 pkgdesc="A modern and intuitive terminal-based text editor"
 url="https://micro-editor.github.io/"
+options="!check chmod-clean"
 arch="all"
 license="MIT"
 makedepends="go"
@@ -33,8 +34,8 @@ package() {
 	install -Dm755 "$srcdir"/bin/$pkgname "$pkgdir"/usr/bin/$pkgname
 	install -Dm644 "$builddir"/assets/packaging/micro.1 -t "$pkgdir"/usr/share/man/man1
 	install -Dm644 "$builddir"/assets/packaging/micro.desktop -t "$pkgdir"/usr/share/applications
-	install -Dm644 "$builddir"/assets/logo.svg "$pkgdir"/usr/share/pixmaps/micro.svg
-	install -Dm644 "$builddir"/assets/logo.png "$pkgdir"/usr/share/pixmaps/micro.png
+	install -Dm644 "$builddir"/assets/micro-logo.svg "$pkgdir"/usr/share/pixmaps/micro.svg
+	install -Dm644 "$builddir"/assets/micro-solarized.png "$pkgdir"/usr/share/pixmaps/micro.png
 }
 
-sha512sums="771e1c2dfd675efa84019ac9b3535d01d82afb31f55323316908ee9b4f7836bf60c8a97583f46009a48d252b99e62df5cd02d68cbb601004fe2b56512bed8a4c  micro-1.4.1.tar.gz"
+sha512sums="8560d0adfd6a96bc081eedfb3e79dfea7ecb56d08f05fe4de8fbe561c455c44f83efcac048997ce5e8ccccabddef81818731ac60931bf639e57dc8a7552ba12f  micro-2.0.0.tar.gz"
