main/openldap: Add support for sha2 password
fixes #11217

--- a/main/openldap/APKBUILD
+++ b/main/openldap/APKBUILD
@@ -13,7 +13,7 @@
 #
 pkgname=openldap
 pkgver=2.4.49
-pkgrel=0
+pkgrel=1
 pkgdesc="LDAP Server"
 url="http://www.openldap.org/"
 arch="all"
@@ -39,6 +39,7 @@ subpackages="
 	$pkgname-clients
 	$pkgname-mqtt
 	$pkgname-passwd-pbkdf2:passwd_pbkdf2
+	$pkgname-passwd-sha2:passwd_sha2
 	$pkgname-backend-all:_backend_all:noarch
 	$pkgname-overlay-all:_overlay_all:noarch
 	$pkgname-openrc
@@ -126,6 +127,10 @@ build() {
 	make prefix=/usr libexecdir=/usr/lib \
 		-C contrib/slapd-modules/passwd/pbkdf2
 
+	# Build passwd sha2.
+	make prefix=/usr libexecdir=/usr/lib \
+		-C contrib/slapd-modules/passwd/sha2
+
 	# Build C++ library.
 	cd contrib/ldapc++
 	autoreconf -fi
@@ -150,6 +155,10 @@ package() {
 	# Install passwd pbkdf2.
 	make DESTDIR="$pkgdir" prefix=/usr libexecdir=/usr/lib \
 		-C contrib/slapd-modules/passwd/pbkdf2 install
+
+	# Install passwd sha2.
+	make DESTDIR="$pkgdir" prefix=/usr libexecdir=/usr/lib \
+		-C contrib/slapd-modules/passwd/sha2 install
 
 	make DESTDIR="$pkgdir" \
 		-C contrib/ldapc++ install
@@ -215,6 +224,13 @@ passwd_pbkdf2() {
 	depends="$pkgname"
 
 	_submv "usr/lib/openldap/pw-pbkdf2.*"
+}
+
+passwd_sha2() {
+	pkgdesc="SHA2 OpenLDAP support"
+	depends="$pkgname"
+
+	_submv "usr/lib/openldap/pw-sha2.*"
 }
 
 _backend_all() {
