community/flatpak: install module-loads config to load fuse
This is required for non-root operations of flatpak

--- a/community/flatpak/APKBUILD
+++ b/community/flatpak/APKBUILD
@@ -3,7 +3,7 @@
 # Maintainer: André Klitzing <aklitzing@gmail.com>
 pkgname=flatpak
 pkgver=1.6.1
-pkgrel=1
+pkgrel=2
 pkgdesc="Application deployment framework for desktop apps"
 url="https://flatpak.org"
 arch="all"
@@ -16,7 +16,8 @@ makedepends="glib-dev libarchive-dev libsoup-dev libcap-dev polkit-dev
 subpackages="$pkgname-dev $pkgname-lang"
 install="flatpak.pre-install flatpak.pre-upgrade"
 source="https://github.com/flatpak/flatpak/releases/download/$pkgver/flatpak-$pkgver.tar.xz
-		musl-fixes.patch"
+		musl-fixes.patch
+		modules-load.conf"
 options="suid !check" # Tests fail with no error message
 
 # secfixes:
@@ -48,7 +49,11 @@ check() {
 package() {
 	make DESTDIR="$pkgdir" install
 	rm -rf "$pkgdir"/usr/lib/systemd
+
+	mkdir -p "$pkgdir"/usr/lib/modules-load.d
+	install -m644 "$srcdir"/modules-load.conf "$pkgdir"/usr/lib/modules-load.d/flatpak.conf
 }
 
 sha512sums="a24fa38091de72c70e500e907ca8856d45335f79db8e70081536fe180a68ce9e22493dcf0697cf3094ed2d478fdf4e16859a72c407331f7821f7acc492cad645  flatpak-1.6.1.tar.xz
-9287ed146bf71665aa436a2c2110cc5edc829a7b4a3e3190947580850fe9ecfd2bb6adb015c692af022d425fb5259390fcdcbd402e8b0d12ee5d2c1a1071ed4f  musl-fixes.patch"
+9287ed146bf71665aa436a2c2110cc5edc829a7b4a3e3190947580850fe9ecfd2bb6adb015c692af022d425fb5259390fcdcbd402e8b0d12ee5d2c1a1071ed4f  musl-fixes.patch
+57d23d2778556eafc3035e6be575bf95b4032f123b35f2b1657eff5e7496de253173edc657f90531ee58e25673f4f27a5cd1cc76b14a038edb244f104a231771  modules-load.conf"
