--- a/testing/qtposition_gpsd/APKBUILD
+++ b/testing/qtposition_gpsd/APKBUILD
@@ -5,7 +5,7 @@ _commit="465a8eafada7f5d788d912ba40b22b3a0065e74b"
 pkgrel=0
 pkgdesc="Qt Position plugin for gpsd"
 url="https://github.com/jmechnich/qtposition_gpsd"
-arch="all"
+arch="all !armhf" # Limited due to qt5-location-dev
 license="MIT"
 makedepends="qt5-qtlocation-dev"
 source="https://github.com/jmechnich/qtposition_gpsd/archive/$_commit.tar.gz"
