--- a/community/flatpak-builder/APKBUILD
+++ b/community/flatpak-builder/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: André Klitzing <aklitzing@gmail.com>
 pkgname=flatpak-builder
 pkgver=1.0.9
-pkgrel=2
+pkgrel=3
 pkgdesc="Tool to build flatpaks from source"
 options="!check" # Testsuite fails on tests that require FUSE
 url="https://flatpak.org"
@@ -35,8 +35,8 @@ build() {
 package() {
 	make DESTDIR="$pkgdir" install
 
-	mkdir -p "$pkgdir"/etc/modules-load.d
-	install -m644 "$srcdir"/modules-load.conf "$pkgdir"/etc/modules-load.d/flatpak-builder.conf
+	mkdir -p "$pkgdir"/usr/lib/modules-load.d
+	install -m644 "$srcdir"/modules-load.conf "$pkgdir"/usr/lib/modules-load.d/flatpak-builder.conf
 }
 
 sha512sums="df420e1b5c556413c9f80318b98c5a628531e0e18aed5ac935b7d48adcfab7276e70ed7d65c1ff51c178a0090e581d35a9ab750e5fd446aa834a1e52b1519df8  flatpak-builder-1.0.9.tar.xz
