community/ibus: enable -emoji subpackage

--- a/community/ibus/APKBUILD
+++ b/community/ibus/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Drew DeVault <sir@cmpwn.com>
 pkgname=ibus
 pkgver=1.5.21
-pkgrel=1
+pkgrel=2
 pkgdesc="Next Generation Input Bus for Linux"
 url="https://github.com/ibus/ibus/wiki"
 arch="all !s390x" # librsvg
@@ -13,9 +13,9 @@ makedepends="
 	dconf-dev gtk+-dev gtk+3.0-dev libnotify-dev iso-codes-dev librsvg-dev
 	gobject-introspection-dev vala intltool qt5-qtbase
 	automake autoconf gnome-common gtk-doc wayland-dev wayland-protocols
-	dbus-x11 unicode-character-database xz
+	dbus-x11 unicode-character-database xz unicode-emoji cldr-emoji-annotation
 "
-subpackages="$pkgname-dev $pkgname-doc $pkgname-lang"
+subpackages="$pkgname-dev $pkgname-doc $pkgname-lang $pkgname-emoji"
 source="
 	$pkgname-$pkgver.tar.gz::https://github.com/ibus/ibus/archive/$pkgver.tar.gz
 	0001-Use-more-portable-call-to-mktemp.patch
@@ -37,7 +37,7 @@ build() {
 		--disable-memconf \
 		--enable-ui \
 		--disable-gtk-doc \
-		--disable-emoji-dict \
+		--enable-emoji-dict \
 		--with-ucd-dir=/usr/share/unicode/
 	make
 }
@@ -48,6 +48,14 @@ check() {
 
 package() {
 	make DESTDIR="$pkgdir" install
+}
+
+emoji() {
+	pkgdesc="$pkgdesc (emojis)"
+	depends="$pkgname unicode-emoji cldr-emoji-annotation"
+
+	mkdir -p "$subpkgdir"/usr/share/ibus
+	mv "$pkgdir"/usr/share/ibus/dicts "$subpkgdir"/usr/share/ibus
 }
 
 sha512sums="39f5ffe0727af3254e060b82cc99a60126489271863272775e5b1d0e26f31d42d2f9a0cbfe1cb797854f2ae66d5b6c8cdf83bab800af8576b82250ec1e6fb33f  ibus-1.5.21.tar.gz
