community/plasma-desktop: enable emoji picker
The user still needs to install an emoji font, but at least the emoji picker works now

--- a/community/plasma-desktop/APKBUILD
+++ b/community/plasma-desktop/APKBUILD
@@ -2,12 +2,14 @@
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=plasma-desktop
 pkgver=5.18.0
-pkgrel=1
+pkgrel=2
 pkgdesc="KDE Plasma Desktop"
-arch="all !armhf" # armhf blocked by qt5-qtdeclarative
+# s390x blocked by ibus
+# armhf blocked by qt5-qtdeclarative
+arch="all !s390x !armhf"
 url='https://www.kde.org/workspaces/plasmadesktop/'
 license="GPL-2.0-only AND LGPL-2.1-only"
-depends="kirigami2 plasma-workspace setxkbmap qqc2-desktop-style"
+depends="kirigami2 plasma-workspace setxkbmap qqc2-desktop-style ibus-emoji"
 depends_dev="
 	qt5-qtbase-dev
 	qt5-qtdeclarative-dev
@@ -44,6 +46,7 @@ depends_dev="
 	libxkbfile-dev
 	libxcursor-dev
 	libxi-dev
+	ibus-dev
 	"
 makedepends="$depends_dev extra-cmake-modules kdoctools-dev"
 checkdepends="xvfb-run iso-codes"
