--- a/testing/pmbootstrap/APKBUILD
+++ b/testing/pmbootstrap/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Oliver Smith <ollieparanoid@postmarketos.org>
 pkgname=pmbootstrap
 pkgver=1.14.0
-pkgrel=0
+pkgrel=1
 pkgdesc="Sophisticated chroot/build/flash tool to develop and install postmarketOS"
 url="https://gitlab.com/postmarketOS/pmbootstrap"
 arch="noarch"
@@ -24,7 +24,7 @@ check() {
 
 package() {
 	python3 setup.py install --prefix=/usr --root="$pkgdir"
-	install -Dm644 "$srcdir"/modules-load.conf "$pkgdir"/etc/modules-load.d/pmbootstrap.conf
+	install -Dm644 "$srcdir"/modules-load.conf "$pkgdir"/usr/lib/modules-load.d/pmbootstrap.conf
 }
 sha512sums="2531539a37c5c37c1731b3ffb51140e35585489aca5b946b0949a67b0d74620b96a16c8943a69a59e302a537d222424778157ec6f0282d7f7474361f3c20446b  pmbootstrap-1.14.0.tar.gz
 f8026ab32234b885e69252459047f70160c54319113bc449000aa7c05bd016f00a46cee05c8f5251682f967ab44a12c06fbbb3c02d0a57ccb836cff810ce1a40  modules-load.conf"
