testing/kio-fuse: install module file into /usr/lib/modules-load.d

--- a/testing/kio-fuse/APKBUILD
+++ b/testing/kio-fuse/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=kio-fuse
 pkgver=4.90.0
-pkgrel=0
+pkgrel=1
 arch="all !armhf"
 url="https://kde.org/"
 pkgdesc="FUSE interface for KIO"
@@ -38,7 +38,7 @@ package() {
 	cd "$builddir"/build
 	DESTDIR="$pkgdir" make install
 
-	install -Dm644 "$srcdir"/modules-load.conf "$pkgdir"/etc/modules-load.d/kio-fuse.conf
+	install -Dm644 "$srcdir"/modules-load.conf "$pkgdir"/usr/lib/modules-load.d/kio-fuse.conf
 }
 
 sha512sums="524b9f6559c7f30823a5e2ffddd65a36ea569bbdba493563fcf9e0a038cd897c27cdf0450a932d7307dec663e898c2f693f6ee17a679df8d4ddf566ffcab73ce  kio-fuse-4.90.0.tar.xz
