community/alpine-desktop: load modules from /lib/modules-load.d
Also makes the post-install just load the module.

--- a/community/alpine-desktop/APKBUILD
+++ b/community/alpine-desktop/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=alpine-desktop
 pkgver=2.6
-pkgrel=1
+pkgrel=2
 pkgdesc="Meta package for Alpine Desktop"
 url="https://alpinelinux.org"
 arch="noarch !s390x"
@@ -27,8 +27,11 @@ depends="
 	"
 install=alpine-desktop.post-install
 options="!check" # Metapackage
+source="mousepad.conf"
 
 package() {
 	mkdir -p "$pkgdir"
+	install -Dm644 "$srcdir"/mousepad.conf -t "$pkgdir"/lib/modules-load.d
 }
 
+sha512sums="9deb5a098379dfa816c40cc4f50a1dffbde1c048e1439f84557b13359ae3f4650c2c72ee7ca31a32efd72f9c5991086d70704784744532d564eaf3aec75f7388  mousepad.conf"
