--- a/community/zerotier-one/APKBUILD
+++ b/community/zerotier-one/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Kyle Parisi <kyleparisi@gmail.com>
 pkgname=zerotier-one
 pkgver=1.4.6
-pkgrel=0
+pkgrel=1
 pkgdesc="ZeroTier One allows systems to join and participate in ZeroTier virtual networks."
 url="https://www.zerotier.com/"
 arch="x86_64 ppc64le"
@@ -28,8 +28,8 @@ package() {
 	make DESTDIR="$pkgdir" install
 	install -m755 -D "$srcdir"/$pkgname.initd \
 		"$pkgdir"/etc/init.d/$pkgname
-	install -d "$pkgdir"/etc/modules-load.d
-	echo "tun" > "$pkgdir"/etc/modules-load.d/$pkgname.conf
+	install -d "$pkgdir"/usr/lib/modules-load.d
+	echo "tun" > "$pkgdir"/usr/lib/modules-load.d/$pkgname.conf
 }
 
 sha512sums="72f00602f67190d03ac0c8caa6b79e7f346b10745bdf772c68f77a3a940cdd718d05ec642bc862a6235aab9bd3bfefb0c57571f358ae55f38761f45500f0f189  zerotier-one-1.4.6.tar.gz
