community/open-vm-tools: install modules file  on /lib/modules-load.d

--- a/community/open-vm-tools/APKBUILD
+++ b/community/open-vm-tools/APKBUILD
@@ -3,7 +3,7 @@ pkgname=open-vm-tools
 pkgver=10.3.10
 _pkgsubver=${pkgver#*_p}
 _ver=${pkgver/_p/-}
-pkgrel=2
+pkgrel=3
 pkgdesc="The Open Virtual Machine Tools are the open source implementation of VMware Tools."
 url="https://github.com/vmware/open-vm-tools/"
 arch="x86 x86_64"
@@ -17,7 +17,7 @@ makedepends="procps-dev libdnet-dev icu-dev glib-dev bash
 	libtirpc-dev linux-headers libmspack-dev openssl-dev rpcgen
 	automake autoconf libtool m4 doxygen xmlsec-dev
 	"
-source="$pkgname-$pkgver.tar.gz::https://github.com/vmware/$pkgname/archive/stable-$_ver.tar.gz
+source="$pkgname-$pkgver.tar.gz::https://github.com/vmware/open-vm-tools/archive/stable-$_ver.tar.gz
 	0001-lib-misc-Recognize-Alpine-Linux.patch
 	0002-open-vm-tools-Add-disable-werror-configure-option.patch
 	0003-Do-not-assume-that-linux-and-gnu-libc-are-the-same-t.patch
@@ -95,8 +95,8 @@ package() {
 	install -D -m 644 "$srcdir"/$pkgname.logrotate \
 		./etc/logrotate.d/$pkgname
 
-	mkdir -p ./etc/modules-load.d/
-	cat > ./etc/modules-load.d/"$pkgname".conf <<-EOF
+	mkdir -p ./lib/modules-load.d/
+	cat > ./lib/modules-load.d/"$pkgname".conf <<-EOF
 		vmblock
 		vmci
 		vmhgfs
