--- a/main/nss/APKBUILD
+++ b/main/nss/APKBUILD
@@ -2,25 +2,22 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=nss
 pkgver=3.49.2
-_ver=${pkgver//./_}
 pkgrel=0
 pkgdesc="Mozilla Network Security Services"
 url="https://developer.mozilla.org/docs/Mozilla/Projects/NSS"
 arch="all"
-license="MPL GPL"
+license="MPL-2.0"
 options="!check" # failing tests
-depends=
 depends_dev="nspr-dev"
 makedepends="nspr-dev sqlite-dev zlib-dev perl bsd-compat-headers linux-headers"
 subpackages="$pkgname-static $pkgname-dev $pkgname-tools"
-source="https://ftp.mozilla.org/pub/security/$pkgname/releases/NSS_${pkgver//./_}_RTM/src/$pkgname-$pkgver.tar.gz
+source="https://ftp.mozilla.org/pub/security/nss/releases/NSS_${pkgver//./_}_RTM/src/nss-$pkgver.tar.gz
 	nss.pc.in
 	nss-util.pc.in
 	nss-softokn.pc.in
 	nss-config.in
 	add_spi+cacert_ca_certs.patch
 	"
-builddir="$srcdir/$pkgname-$pkgver"
 
 # secfixes:
 #   3.49-r0:
@@ -41,7 +38,6 @@ prepare() {
 }
 
 build() {
-	cd "$builddir"
 	unset CFLAGS
 	unset CXXFLAGS
 	export BUILD_OPT=1
@@ -50,8 +46,8 @@ build() {
 	export FREEBL_NO_DEPEND=0
 	export NSS_USE_SYSTEM_SQLITE=1
 	export NSS_ENABLE_WERROR=0
-	export NSPR_INCLUDE_DIR=`pkg-config --cflags-only-I nspr | sed 's/-I//'`
-	export NSPR_LIB_DIR=`pkg-config --libs-only-L nspr | sed 's/-L.//'`
+	export NSPR_INCLUDE_DIR=$(pkg-config --cflags-only-I nspr | sed 's/-I//')
+	export NSPR_LIB_DIR=$(pkg-config --libs-only-L nspr | sed 's/-L//')
 	case "$CARCH" in
 		*64* | s390x) export USE_64=1;;
 	esac
@@ -67,20 +63,17 @@ check() {
 package() {
 	replaces="nss-dev libnss"
 
-	cd "$builddir"
-
 	install -m755 -d "$pkgdir"/usr/lib/pkgconfig
 	install -m755 -d "$pkgdir"/usr/bin
 	install -m755 -d "$pkgdir"/usr/include/nss/private
 
-	NSS_VMAJOR=`awk '/#define.*NSS_VMAJOR/ {print $3}' nss/lib/nss/nss.h `
-	msg "DEBUG: $NSS_VMAJOR"
-	NSS_VMINOR=`awk '/#define.*NSS_VMINOR/ {print $3}' nss/lib/nss/nss.h`
-	NSS_VPATCH=`awk '/#define.*NSS_VPATCH/ {print $3}' nss/lib/nss/nss.h`
+	NSS_VMAJOR=$(awk '/#define.*NSS_VMAJOR/ {print $3}' nss/lib/nss/nss.h)
+	NSS_VMINOR=$(awk '/#define.*NSS_VMINOR/ {print $3}' nss/lib/nss/nss.h)
+	NSS_VPATCH=$(awk '/#define.*NSS_VPATCH/ {print $3}' nss/lib/nss/nss.h)
 
 	# pkgconfig files
 	local _pc; for _pc in nss.pc nss-util.pc nss-softokn.pc; do
-		sed "$srcdir"/${_pc}.in \
+		sed "$srcdir"/$_pc.in \
 			-e "s,%libdir%,/usr/lib,g" \
 			-e "s,%prefix%,/usr,g" \
 			-e "s,%exec_prefix%,/usr/bin,g" \
@@ -89,7 +82,7 @@ package() {
 			-e "s,%NSPR_VERSION%,$pkgver,g" \
 			-e "s,%NSS_VERSION%,$pkgver,g" \
 			-e "s,%NSSUTIL_VERSION%,$pkgver,g" \
-			> "$pkgdir"/usr/lib/pkgconfig/${_pc}
+			> "$pkgdir"/usr/lib/pkgconfig/$_pc
 	done
 	ln -sf nss.pc "$pkgdir"/usr/lib/pkgconfig/mozilla-nss.pc
 	chmod 644 "$pkgdir"/usr/lib/pkgconfig/*.pc
@@ -124,17 +117,15 @@ package() {
 }
 
 static() {
-	pkgdesc="Static libraries for nss"
-	mkdir -p "$subpkgdir"/usr/lib
-	mv "$pkgdir"/usr/lib/*.a "$subpkgdir"/usr/lib/
+	default_static
 
-	# remove libssl.a which conflicts with libressl
+	# remove libssl.a which conflicts with openssl
 	rm "$subpkgdir"/usr/lib/libssl.a
 }
 
 dev() {
 	# we cannot use default_dev because we need the .so symlinks in main package
-	local i= j=
+	local i
 	pkgdesc="Development files for nss"
 	depends="$pkgname $depends_dev"
 
