community/unicode-emoji: move from testing and take up maintainership

--- a/community/unicode-emoji/APKBUILD
+++ b/community/unicode-emoji/APKBUILD
@@ -1,10 +1,11 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
+# Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=unicode-emoji
 pkgver=12.1
-pkgrel=0
+pkgrel=1
 pkgdesc="Unicode Emoji Data Files"
 arch="noarch"
-license="BSD"
+license="Unicode-DFS-2016"
 url="http://www.unicode.org/emoji/"
 source="emoji-data-$pkgver.txt::http://www.unicode.org/Public/emoji/$pkgver/emoji-data.txt
 	emoji-sequences-$pkgver.txt::http://www.unicode.org/Public/emoji/$pkgver/emoji-sequences.txt
