community/cldr-emoji-annotation: move from testing and take up maintainership

--- a/community/cldr-emoji-annotation/APKBUILD
+++ b/community/cldr-emoji-annotation/APKBUILD
@@ -1,15 +1,22 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
+# Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=cldr-emoji-annotation
 pkgver=33.1.0_p0
 _tag=${pkgver/_p/_}
-pkgrel=1
+pkgrel=2
 pkgdesc="Emoji annotation files in CLDR"
 arch="noarch"
 url="https://github.com/fujiwarat/cldr-emoji-annotation"
 license="Unicode-DFS-2016"
 makedepends="automake autoconf"
-source="$pkgname-$pkgver.tar.gz::https://github.com/fujiwarat/$pkgname/archive/$_tag.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://github.com/fujiwarat/cldr-emoji-annotation/archive/$_tag.tar.gz"
 builddir="$srcdir/$pkgname-$_tag"
+
+prepare() {
+	default_prepare
+
+	sed -i 's|@VERSION@|${pkgver%%_*}|g' $pkgname.pc.in
+}
 
 build() {
 	./autogen.sh --prefix=/usr
@@ -18,8 +25,6 @@ build() {
 
 package() {
 	make DESTDIR="$pkgdir" install
-
-	install -Dm644 unicode-license.txt "$pkgdir"/usr/share/licenses/$pkgname/license
 
 	# TODO(leo): pkgconfig file has weird version so a pc: is not made
 	mkdir -p "$pkgdir"/usr/lib
