--- a/community/unicode-emoji/APKBUILD
+++ b/community/unicode-emoji/APKBUILD
@@ -1,17 +1,19 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=unicode-emoji
-pkgver=12.1
-pkgrel=1
+pkgver=13.0
+pkgrel=0
 pkgdesc="Unicode Emoji Data Files"
 arch="noarch"
 license="Unicode-DFS-2016"
 url="http://www.unicode.org/emoji/"
-source="emoji-data-$pkgver.txt::http://www.unicode.org/Public/emoji/$pkgver/emoji-data.txt
+source="
 	emoji-sequences-$pkgver.txt::http://www.unicode.org/Public/emoji/$pkgver/emoji-sequences.txt
+	emoji-zwj-sequences-$pkgver.txt::http://www.unicode.org/Public/emoji/$pkgver/emoji-zwj-sequences.txt
 	emoji-test-$pkgver.txt::http://www.unicode.org/Public/emoji/$pkgver/emoji-test.txt
-	emoji-variation-sequences-$pkgver.txt::http://www.unicode.org/Public/emoji/$pkgver/emoji-variation-sequences.txt
-	emoji-zwj-sequences-$pkgver.txt::http://www.unicode.org/Public/emoji/$pkgver/emoji-zwj-sequences.txt"
+	emoji-data-$pkgver.txt::http://www.unicode.org/Public/$pkgver.0/ucd/emoji/emoji-data.txt
+	emoji-variation-sequences-$pkgver.txt::http://www.unicode.org/Public/$pkgver.0/ucd/emoji/emoji-variation-sequences.txt
+"
 builddir="$srcdir"
 
 package() {
@@ -19,8 +21,8 @@ package() {
 		install -Dm644 emoji-$_f-$pkgver.txt "$pkgdir/usr/share/unicode/emoji/emoji-$_f.txt"
 	done
 }
-sha512sums="1509849e5107ba21185d421083071d2512d739903a8f5c3ce8a825b82436ac11f1549446efd226921c596e1470a457271df43a01118ae505065b65841e03a541  emoji-data-12.1.txt
-900c508bd1924f22e399f87c25283e01b4cff90707c59668d983c3810aa4ce974d6d7f4883ee6c13a8a2c129cb97a6ca5ff6d5ed509c2e099a6e730017c94bb6  emoji-sequences-12.1.txt
-63695149ef4b51fc4f048bcd1b233a4c012a5c29fe10e074ff5ba5d51865a663f7db246eb688fc09af3f4d47c5862e007d60e4a159cfd65897b7eec54713f7a0  emoji-test-12.1.txt
-de4081ca8e2802d35ce8a2606c636c05bd289a1813fd4464d6ad662b8d619389847fb3ee391ffd6c0d6b3073d0cb9aa627a30df82ead4b3a2875d056e70b7357  emoji-variation-sequences-12.1.txt
-e21302b34d7a4c6d45f9d5d5b4e1eb9a93916cb2931c0d1c1725b93fecd4bb526b1494b95816fff10a345c5d8bb5830e92f454224666cbe795d4772f6231fa85  emoji-zwj-sequences-12.1.txt"
+sha512sums="65f4fdaf6f2038d34f645220a0306036244dba69aeba0a44939584c18ad8e0488cb612f07e17cdb1ffea3d8d2fe3e54ed2e134855c3dc615730fd14cd297a9a3  emoji-sequences-13.0.txt
+a0b04ca2732acd33c7ea9a2929ef5d60080dfeb4b1b452e853486e57663518773af4e863b239dd2bd6f5e78ce2a7e828898757ca4adc82134da370111c3e0272  emoji-zwj-sequences-13.0.txt
+6da82936f1eb92e5d31a4e815204e17119011408d746c60c3ecd700c8039389d7c790c8ea6b8ec2828aadd863b923f0d3861a42a1f6b5ecdbbb19d2f5f81ea56  emoji-test-13.0.txt
+7b6f838a5b863b070cdf4289a8b7a2e6f07e5af8c6614aa58b4179658f7d73161615c3c4757464585d1e9d73d307e0a60fd6621900aa9e88365d8c03729780d0  emoji-data-13.0.txt
+7edaf7c4df3eb34aa208ae5688a59220d125d3eb262b750493e758584d92ab3dfb3eee23a9e31c50902f4513a5a91e6cee5708bc16d052a568bd7b355573895c  emoji-variation-sequences-13.0.txt"
