community/xournalpp: upgrade to 1.0.17

--- a/community/xournalpp/APKBUILD
+++ b/community/xournalpp/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Rasmus Thomsen <oss@cogitri.dev>
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=xournalpp
-pkgver=1.0.16
+pkgver=1.0.17
 pkgrel=0
 pkgdesc="Xournal++ is a handwriting notetaking software with PDF annotation support"
 url="https://github.com/xournalpp/xournalpp"
@@ -30,10 +30,11 @@ build() {
 		-DCMAKE_C_FLAGS="$CFLAGS" \
 		${CMAKE_CROSSOPTS} .
 	make
+	make translations
 }
 
 package() {
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="cbfd528a1aa4f0d58bf8ceeede47e6dd94258fafb7c57e11031783e8c98eb037a561ff8bdf699455908d86886ca52ceba21bad7ac372e5eb2205b0382fd2c520  xournalpp-1.0.16.tar.gz"
+sha512sums="cc3568ce22fd42f0e8458f1428c102d2fc18a9650d8c5968cadd6693fc19374780beb3c7f6206f2f494439296a883b2a5160da37e3a0e10d6fe3654084967ab9  xournalpp-1.0.17.tar.gz"
