community/cldr-emoji-annotation: upgrade to 36.12.120191002.0

--- a/community/cldr-emoji-annotation/APKBUILD
+++ b/community/cldr-emoji-annotation/APKBUILD
@@ -1,13 +1,13 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=cldr-emoji-annotation
-pkgver=33.1.0_p0
-_tag=${pkgver/_p/_}
-pkgrel=2
+pkgver=36.12.120191002.0
+_tag=${pkgver%.*}_${pkgver##*.}
+pkgrel=0
 pkgdesc="Emoji annotation files in CLDR"
 arch="noarch"
 url="https://github.com/fujiwarat/cldr-emoji-annotation"
-license="Unicode-DFS-2016"
+license="Unicode-DFS-2016 AND LGPL-2.0-or-later"
 makedepends="automake autoconf"
 source="$pkgname-$pkgver.tar.gz::https://github.com/fujiwarat/cldr-emoji-annotation/archive/$_tag.tar.gz"
 builddir="$srcdir/$pkgname-$_tag"
@@ -30,4 +30,4 @@ package() {
 	mkdir -p "$pkgdir"/usr/lib
 	mv "$pkgdir"/usr/share/pkgconfig "$pkgdir"/usr/lib
 }
-sha512sums="57dc2b7c8ce4b287eb83113b4d66f5359ce0e03a86477926705864d997bf87a5638dd66414b8ec4549a887cd328c9f996249269be4ca05f0d86d00393e55c513  cldr-emoji-annotation-33.1.0_p0.tar.gz"
+sha512sums="d186413587ff62280d6f40f1ae7fae50c0e821a68407288a440b21bcb3a0ccf87617a40e02e606c30d895b8da0be3d7f073092090219457bf1f6d5ac4e54a0a8  cldr-emoji-annotation-36.12.120191002.0.tar.gz"
