community/umbrello: move from testing

--- a/community/umbrello/APKBUILD
+++ b/community/umbrello/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=umbrello
 pkgver=19.12.2
 pkgrel=0
-arch="all !armhf"
+arch="all !armhf" # Blocked by extra-cmake-modules
 url="https://umbrello.kde.org/"
 pkgdesc="GUI for diagramming Unified Modelling Language (UML)"
 license="GPL-2.0-or-later AND LGPL-2.0-or-later AND GFDL-1.2-only"
@@ -12,20 +12,13 @@ checkdepends="xvfb-run"
 source="https://download.kde.org/stable/release-service/$pkgver/src/umbrello-$pkgver.tar.xz"
 subpackages="$pkgname-doc $pkgname-lang"
 
-prepare() {
-	default_prepare
-
-	mkdir "$builddir"/build
-}
-
 build() {
-	cd "$builddir"/build
-	cmake "$builddir" \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=RelWithDebInfo \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib \
 		-DBUILD_KF5=ON
-	make
+	make -C build
 }
 
 check() {
@@ -34,8 +27,7 @@ check() {
 }
 
 package() {
-	cd "$builddir"/build
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
 
 sha512sums="85f3fda1d1f075aaf747265e377fd064e26ffb813fb92ec9157dfebfc5e3ba0e27f28ad1a879083db14f49908d6af688c747b24572705778538adab74d25fde3  umbrello-19.12.2.tar.xz"
