--- a/testing/signon-plugin-oauth2/APKBUILD
+++ b/testing/signon-plugin-oauth2/APKBUILD
@@ -2,13 +2,14 @@
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=signon-plugin-oauth2
 pkgver=0.24
-pkgrel=0
+pkgrel=1
 arch="all"
 url="https://gitlab.com/accounts-sso/signon-plugin-oauth2"
 pkgdesc="Signond OAuth 1.0 and 2.0 plugin"
 license="LGPL-2.1-only"
 makedepends="qt5-qtbase-dev signond-dev"
 source="https://gitlab.com/accounts-sso/signon-plugin-oauth2/-/archive/VERSION_$pkgver/signon-plugin-oauth2-VERSION_$pkgver.tar.gz"
+subpackages="$pkgname-dev"
 builddir="$srcdir/$pkgname-VERSION_$pkgver"
 
 prepare() {
