--- a/testing/bmake/APKBUILD
+++ b/testing/bmake/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Sören Tempel <soeren+alpine@soeren-tempel.net>
 pkgname=bmake
-pkgver=20181221
-pkgrel=1
+pkgver=20200205
+pkgrel=0
 pkgdesc="Portable version of the NetBSD make build tool"
 url="http://www.crufty.net/help/sjg/bmake.html"
 arch="all"
@@ -9,7 +9,8 @@ license="BSD-2-Clause"
 subpackages="$pkgname-doc"
 source="http://www.crufty.net/ftp/pub/sjg/bmake-$pkgver.tar.gz
 	install-sh.patch
-	separate-tests.patch"
+	separate-tests.patch
+	missing-filemon-check.patch"
 builddir="$srcdir/$pkgname"
 
 # Reset MAKEFLAGS since it might contain options not supported
@@ -33,6 +34,7 @@ package() {
 		"$pkgdir"/usr/share/man/man1/bmake.1
 }
 
-sha512sums="7824fb60e4ac8f9c5ab9f6a0d42720c5f3cb475851146bf8042625eb58bbd0dbacafce6969da2b51cdd6514e789a8f2a958e8b8538cd862eeea1b571da203e5b  bmake-20181221.tar.gz
+sha512sums="1d49f229c6437102dce7d8cbc364538d8a027f45907f613ce93a5f80d5b3c81ff871086dc9ac14d17d2dad7697a5b40ab4ffd942420069e34301e5aa363b7e23  bmake-20200205.tar.gz
 0de9022a2991c5ef02c09ab592a3e2d218cd0bbf58e54f21bc7694110f3dd9e4589bf2b3d241fd167fb220b425007863f20e71e141b4f65bf92d305ba94209da  install-sh.patch
-04217b04aca4252f54c836e982d95106a09166370f84fa672c418d1b1799adb9697f5ac9eb10a6ee3a8527e39196a37ad92bb5945733407bf9ec1a7f223183bb  separate-tests.patch"
+04217b04aca4252f54c836e982d95106a09166370f84fa672c418d1b1799adb9697f5ac9eb10a6ee3a8527e39196a37ad92bb5945733407bf9ec1a7f223183bb  separate-tests.patch
+2a2e960299dac592663779f38b282d5cc8ac3fcacebafa38af457d54e8d75d2eae8868405638483f70aac2d38daa43a9a7c00443923d643914c9ea29a63b0e95  missing-filemon-check.patch"
