--- a/testing/signon-ui/APKBUILD
+++ b/testing/signon-ui/APKBUILD
@@ -4,7 +4,7 @@ pkgname=signon-ui
 pkgver=0.17_git20171023
 pkgrel=0
 _commit="4368bb77d9d1abc2978af514225ba4a42c29a646"
-arch="all !ppc64le !s390x" # Blocked by qt5-qtwebengine
+arch="all !ppc64le !s390x !armhf" # Blocked by qt5-qtwebengine
 url="https://gitlab.com/accounts-sso/signon-ui-qt"
 pkgdesc="Signond Qt UI"
 license="GPL-3.0-only"
