--- a/community/ttyd/APKBUILD
+++ b/community/ttyd/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Jakub Jirutka <jakub@jirutka.cz>
 # Maintainer: Jakub Jirutka <jakub@jirutka.cz>
 pkgname=ttyd
-pkgver=1.5.2
+pkgver=1.6.0
 pkgrel=0
 pkgdesc="Share your terminal over the web"
 url="https://tsl0922.github.io/ttyd"
@@ -9,10 +9,11 @@ arch="all"
 license="MIT"
 # Note: vim is needed for tool xxd.
 makedepends="cmake json-c-dev bsd-compat-headers openssl-dev libwebsockets-dev
-	vim zlib-dev"
+	vim zlib-dev libuv-dev"
 subpackages="$pkgname-doc"
-source="$pkgname-$pkgver.tar.gz::https://github.com/tsl0922/$pkgname/archive/$pkgver.tar.gz
-	fix-cmake.patch"
+source="$pkgname-$pkgver.tar.gz::https://github.com/tsl0922/ttyd/archive/$pkgver.tar.gz
+	fix-cmake.patch
+	"
 
 build() {
 	mkdir -p build && cd build
@@ -34,5 +35,5 @@ package() {
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="a1b2931fed58d338fc73b531afe7ae097b30e84d761137068207d0ebd13dd19a330d9d2ec919c0436a9244d2cbfb8e42f1f4bcf9a095fb04934defd08ba78203  ttyd-1.5.2.tar.gz
-677f71abfec9e74db8f7976e6cb8c4eba052df71162390fa26e7c31f064a179d8587f07088eb0a5ada507a345b11af8d663162c77aad5e7fd129503eb15f83af  fix-cmake.patch"
+sha512sums="f713ebfc4b36784a9a66b2ed1c11386c6edb2acfe8030e60f589f0d4325a9c237001d47c0de9938fa3d4c8d58cd8e233ec7fe9760fcda6b9fa5a518a4f4b7c90  ttyd-1.6.0.tar.gz
+c489436c976c0a598763d3ebedcd42a7b3715b2c07967d74aaaad1fca345f85699f78ca3b62f0d810da0a1c91e868b8011cd3f9b62b5d5ad0a6185a8c5b6075f  fix-cmake.patch"
