--- a/main/wayland/APKBUILD
+++ b/main/wayland/APKBUILD
@@ -2,7 +2,7 @@
 # Contributor: Bartłomiej Piotrowski <bpiotrowski@alpinelinux.org>
 # Maintainer: Valery Kartel <valery.kartel@gmail.com>
 pkgname=wayland
-pkgver=1.17.0
+pkgver=1.18.0
 pkgrel=0
 pkgdesc="A computer display server protocol"
 url="http://wayland.freedesktop.org"
@@ -13,14 +13,12 @@ depends_dev="libffi-dev expat-dev"
 makedepends="$depends_dev doxygen xmlto graphviz grep libxml2-dev bash"
 subpackages="$pkgname-dev $pkgname-libs-client:_libs $pkgname-libs-egl:_libs
 	$pkgname-libs-cursor:_libs $pkgname-libs-server:_libs"
-source="https://wayland.freedesktop.org/releases/$pkgname-$pkgver.tar.xz
+source="https://wayland.freedesktop.org/releases/wayland-$pkgver.tar.xz
 	tests-ignore-debugger.patch
 	"
 
-builddir="$srcdir/$pkgname-$pkgver"
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -35,12 +33,10 @@ build() {
 }
 
 check() {
-	cd "$builddir"
 	make check WAYLAND_TEST_IGNORE_DEBUGGER=1
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 }
 
@@ -62,5 +58,5 @@ _libs() {
 	mv "$pkgdir"/usr/lib/*-$name.so.* "$subpkgdir"/usr/lib
 }
 
-sha512sums="c5051aab5ff078b368c196ecfedb33ccd961265bb914845d7ed81de361bb86ae18299575baa6c4eceb0d82cf8b495e8293f31b51d1cbc05d84af0a199ab3f946  wayland-1.17.0.tar.xz
+sha512sums="e30199e30c2bbd361ee695b4f3f7a4e264f10ed8f46f2c90762b5739fc578ae757dc39aa0258d8fbf0ed418553470bccd4b2730ed9705481cfccdab5de96a8fc  wayland-1.18.0.tar.xz
 0f65a55265e9134ab08cabf67f9d1919c85c4cb6b69129e78bc6c50057cafcaf143007716a0fa73b2eb43d6b605944c320a12a36dbb5f15fcd2f5e770248c480  tests-ignore-debugger.patch"
