--- a/main/fish/APKBUILD
+++ b/main/fish/APKBUILD
@@ -1,15 +1,15 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
 # Maintainer: Leo <thinkabit.ukim@gmail.com>
 pkgname=fish
-pkgver=3.0.2
-pkgrel=5
+pkgver=3.1.0
+pkgrel=0
 pkgdesc="Modern interactive commandline shell"
 url="http://www.fishshell.com"
 arch="all"
 license="GPL-2.0-only"
 depends="bc"
 depends_dev="$pkgname-tools"
-makedepends="doxygen ncurses-dev ncurses pcre2-dev"
+makedepends="cmake doxygen ncurses-dev ncurses pcre2-dev"
 checkdepends="expect bash"
 install="$pkgname.post-install $pkgname.post-upgrade $pkgname.pre-deinstall"
 subpackages="$pkgname-dev $pkgname-doc $pkgname-tools::noarch"
@@ -17,46 +17,34 @@ source="https://github.com/fish-shell/fish-shell/releases/download/$pkgver/fish-
 
 prepare() {
 	default_prepare
-	cd "$builddir"
 	for f in $(find share/tools -type f -name '*.py'); do
 		sed -i -e '1{s@^#!.*@#!%{__python3}@}' "$f"
 	done
 }
 
 build() {
-	cd "$builddir"
-	./configure \
-		--build=$CBUILD \
-		--host=$CHOST \
-		--prefix=/usr \
-		--sysconfdir=/etc \
-		--without-included-pcre2 \
-		--disable-internal-wcwidth
-	make V=1
+	if [ "$CBUILD" != "$CHOST" ]; then
+		CMAKE_CROSSOPTS="-DCMAKE_SYSTEM_NAME=Linux -DCMAKE_HOST_SYSTEM_NAME=Linux"
+	fi
+	cmake -B builddir \
+		-DCMAKE_INSTALL_PREFIX=/usr \
+		-DCMAKE_INSTALL_LIBDIR=lib \
+		-DBUILD_SHARED_LIBS=True \
+		-DCMAKE_BUILD_TYPE=Release \
+		-DCMAKE_INSTALL_SYSCONFDIR=/etc \
+		-DCMAKE_CXX_FLAGS="$CXXFLAGS" \
+		-DCMAKE_C_FLAGS="$CFLAGS" \
+		${CMAKE_CROSSOPTS} .
+	make -C builddir
 }
 
 check() {
-	cd "$builddir"
-
-	# Failing test
-	rm -rf tests/invocation/bad-switch*
-
-	# Tests that use locales
-	rm -rf tests/test9* tests/printf*
-
-	# Fail for unknown reasons
-	rm -rf tests/math* tests/function*
-
-	# Fails on CI
-	rm -rf tests/test1* tests/histfile*
-
-	TERM=linux make test
+	cd builddir
+	ctest
 }
 
 package() {
-	cd "$builddir"
-
-	make install DESTDIR="$pkgdir"
+	make -C builddir install DESTDIR="$pkgdir"
 	rm -fr "$pkgdir"/usr/share/$pkgname/groff
 
 	mkdir -p "$pkgdir"/usr/lib
@@ -78,4 +66,4 @@ tools() {
 	mv "$pkgdir"/usr/share/$pkgname/tools "$subpkgdir"/usr/share/$pkgname
 }
 
-sha512sums="cd4a8e6a0d7770ef17e92d3d20ea23e754b9fa53e5ee5459ab5838fcbbcac69544ca2f83551e93a004b140cc14ec556860a711ce216197753c1704901518c9c3  fish-3.0.2.tar.gz"
+sha512sums="143e462b5329790fa9834e135109e1397c3525756a0209d0ec68a53f7d2a1f581cd45fbbdcde6a5b53dff447da18ed6a62277993d851e7b18ef7f1a6b6d49cff  fish-3.1.0.tar.gz"
