--- a/testing/firefox/APKBUILD
+++ b/testing/firefox/APKBUILD
@@ -6,7 +6,8 @@ pkgver=73.0
 pkgrel=0
 pkgdesc="Firefox web browser"
 url="https://www.firefox.com/"
-arch="all !s390x !armhf" # limited by rust and cargo, build failure on armhf due to wasm
+arch="all !s390x !armhf !armv7 !aarch64" # limited by rust and cargo, build failure on armhf due to wasm
+# aarch64/armv7: cannot convert 'uint16x8_t' {aka '__vector(8) short unsigned int'} to 'uint8x16_t' {aka '__vector(16) unsigned char'}
 license="GPL-3.0-only AND LGPL-2.1-only AND LGPL-3.0-only AND MPL-2.0"
 makedepends="
 	alsa-lib-dev
