testing/bmake: upgrade to 20200212

--- a/testing/bmake/APKBUILD
+++ b/testing/bmake/APKBUILD
@@ -1,6 +1,6 @@
 # Maintainer: Sören Tempel <soeren+alpine@soeren-tempel.net>
 pkgname=bmake
-pkgver=20200205
+pkgver=20200212
 pkgrel=0
 pkgdesc="Portable version of the NetBSD make build tool"
 url="http://www.crufty.net/help/sjg/bmake.html"
@@ -9,8 +9,7 @@ license="BSD-2-Clause"
 subpackages="$pkgname-doc"
 source="http://www.crufty.net/ftp/pub/sjg/bmake-$pkgver.tar.gz
 	install-sh.patch
-	separate-tests.patch
-	missing-filemon-check.patch"
+	separate-tests.patch"
 builddir="$srcdir/$pkgname"
 
 # Reset MAKEFLAGS since it might contain options not supported
@@ -34,7 +33,6 @@ package() {
 		"$pkgdir"/usr/share/man/man1/bmake.1
 }
 
-sha512sums="1d49f229c6437102dce7d8cbc364538d8a027f45907f613ce93a5f80d5b3c81ff871086dc9ac14d17d2dad7697a5b40ab4ffd942420069e34301e5aa363b7e23  bmake-20200205.tar.gz
+sha512sums="a528c67173d663ebc5a877156ef4fe93976599af7d0e3538b5d6f4b73a21da8093a279df08403adb1b7b57aba6ee7145109d1b2a95e1755b46a3169f409fff0f  bmake-20200212.tar.gz
 0de9022a2991c5ef02c09ab592a3e2d218cd0bbf58e54f21bc7694110f3dd9e4589bf2b3d241fd167fb220b425007863f20e71e141b4f65bf92d305ba94209da  install-sh.patch
-04217b04aca4252f54c836e982d95106a09166370f84fa672c418d1b1799adb9697f5ac9eb10a6ee3a8527e39196a37ad92bb5945733407bf9ec1a7f223183bb  separate-tests.patch
-2a2e960299dac592663779f38b282d5cc8ac3fcacebafa38af457d54e8d75d2eae8868405638483f70aac2d38daa43a9a7c00443923d643914c9ea29a63b0e95  missing-filemon-check.patch"
+04217b04aca4252f54c836e982d95106a09166370f84fa672c418d1b1799adb9697f5ac9eb10a6ee3a8527e39196a37ad92bb5945733407bf9ec1a7f223183bb  separate-tests.patch"
