testing/bmake: install additional documentation files

--- a/testing/bmake/APKBUILD
+++ b/testing/bmake/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Sören Tempel <soeren+alpine@soeren-tempel.net>
 pkgname=bmake
 pkgver=20200212
-pkgrel=0
+pkgrel=1
 pkgdesc="Portable version of the NetBSD make build tool"
 url="http://www.crufty.net/help/sjg/bmake.html"
 arch="all"
@@ -31,6 +31,10 @@ package() {
 	rm -rf "$pkgdir"/usr/share/man/cat1
 	install -Dm644 bmake.1 \
 		"$pkgdir"/usr/share/man/man1/bmake.1
+
+	mkdir -p "$pkgdir"/usr/share/doc/$pkgname/
+	install -m644 README ChangeLog \
+		"$pkgdir"/usr/share/doc/$pkgname/
 }
 
 sha512sums="a528c67173d663ebc5a877156ef4fe93976599af7d0e3538b5d6f4b73a21da8093a279df08403adb1b7b57aba6ee7145109d1b2a95e1755b46a3169f409fff0f  bmake-20200212.tar.gz
