main/cdparanoia: modernize

--- a/main/cdparanoia/APKBUILD
+++ b/main/cdparanoia/APKBUILD
@@ -10,15 +10,14 @@ options="!check"  # Build system has test suite commented out.
 license="LGPL-2.0-or-later"
 makedepends="libtool autoconf automake linux-headers"
 subpackages="$pkgname-dev $pkgname-doc $pkgname-libs"
-patches="gcc.patch fix-includes.patch no-cuserid.patch"
-source="http://downloads.xiph.org/releases/cdparanoia/$pkgname-III-$pkgver.src.tgz
-	$patches"
-
-builddir="$srcdir/cdparanoia-III-$pkgver"
+source="http://downloads.xiph.org/releases/cdparanoia/cdparanoia-III-$pkgver.src.tgz
+	gcc.patch
+	fix-includes.patch
+	no-cuserid.patch"
+builddir="$srcdir/$pkgname-III-$pkgver"
 
 prepare() {
 	default_prepare
-	cd "$builddir"
 	mv configure.guess config.guess
 	mv configure.sub config.sub
 	update_config_sub
@@ -28,7 +27,6 @@ prepare() {
 }
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -40,7 +38,6 @@ build() {
 }
 
 package() {
-	cd "$builddir"
 	make prefix="$pkgdir"/usr MANDIR="$pkgdir"/usr/share/man install
 }
 
