testing/b3sum: upgrade to 0.2.0

--- a/testing/b3sum/APKBUILD
+++ b/testing/b3sum/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
 # Maintainer: Leo <thinkabit.ukim@gmail.com>
 pkgname=b3sum
-pkgver=0.1.5
+pkgver=0.2.0
 pkgrel=0
 pkgdesc="Command line implementation of the BLAKE3 hash function"
 url="https://blake3.io"
@@ -12,7 +12,7 @@ source="b3sum-$pkgver.tar.gz::https://crates.io/api/v1/crates/b3sum/$pkgver/down
 
 case "$CARCH" in
 	arm*) _features="c_neon rayon" ;;
-	x86_64) _features="c_avx512 rayon" ;;
+	x86_64) _features="c rayon" ;;
 	*) _features="rayon" ;;
 esac
 
@@ -29,4 +29,4 @@ package() {
 	rm "$pkgdir"/usr/.crates.toml
 }
 
-sha512sums="613a8a1477f37b7d7684ae8cf2f2444e65ae165c437afbfaf3217bab7a804478a428af7c253c8b7fc3ef6a975541091af5d55247559992d1b159ed1290200cfe  b3sum-0.1.5.tar.gz"
+sha512sums="7a934ff09f252578df90cdad74ca35e348d14c8b6c6389c1ea11e96c40a360c714979a30bbc8367e233b963c41848e63d1eaa18ccf7e6621ac9c7574449428db  b3sum-0.2.0.tar.gz"
