community/wt: upgrade to 4.2.1

--- a/community/wt/APKBUILD
+++ b/community/wt/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Francesco Colista <fcolista@alpinelinux.org>
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=wt
-pkgver=4.2.0
-pkgrel=1
+pkgver=4.2.1
+pkgrel=0
 pkgdesc="A C++ library and application server for developing and deploying web applications"
 url="https://www.webtoolkit.eu"
 arch="all"
@@ -15,7 +15,7 @@ pkggroups="wt"
 pkgusers="wt"
 options="!check"
 subpackages="$pkgname-dev"
-source="$pkgname-$pkgver.tar.gz::https://github.com/kdeforche/$pkgname/archive/$pkgver.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://github.com/kdeforche/wt/archive/$pkgver.tar.gz"
 
 build() {
 	mkdir -p build && cd build
@@ -41,4 +41,4 @@ package() {
 	rm -rf $pkgdir/var/run
 }
 
-sha512sums="55d8684f3574a2373c70a2207609b80f43c2235def813871111fefd0e6b4704d1b774a07e258240ee65ada84a07dfc61e2c14f121c92391588c9a5dd992293ad  wt-4.2.0.tar.gz"
+sha512sums="fc1b32e32a55376842ba3d3c3b1f237ab52f8978b5b22a2ed4d57e10c95f03bb2c8613a92a977f581a78457e029c45d73f33df0647e3e65709a6b30b8d1fe4d3  wt-4.2.1.tar.gz"
