--- a/testing/telegram-desktop/APKBUILD
+++ b/testing/telegram-desktop/APKBUILD
@@ -2,7 +2,7 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
 pkgname=telegram-desktop
 pkgver=1.9.13
-pkgrel=0
+pkgrel=1
 pkgdesc="Telegram Desktop messaging app"
 options="!check" # Requires Catch2 to be packaged.
 url="https://desktop.telegram.org/"
@@ -42,6 +42,7 @@ makedepends="
 source="
 	https://github.com/telegramdesktop/tdesktop/releases/download/v$pkgver/tdesktop-$pkgver-full.tar.gz
 	qt-plugin-path.patch
+	small-sizes.patch
 	"
 builddir="$srcdir/tdesktop-$pkgver-full"
 
@@ -91,4 +92,5 @@ package() {
 }
 
 sha512sums="995face8a2ffb54f9f31aaa8d5a26421f4915e73360945553b6fa4e4b02431ca83ec1e72d6d2ce77f5b9daa39892859c88f7ea53c3ddbeec2cb37f27451878d2  tdesktop-1.9.13-full.tar.gz
-183767e9a291dd605797cdc46382d8cb6a73a342348a40df7d52864ea27b3aa8709808cd51c46f5e611c247229ed336cb569bed1185c4c97b03171b56bbe5653  qt-plugin-path.patch"
+183767e9a291dd605797cdc46382d8cb6a73a342348a40df7d52864ea27b3aa8709808cd51c46f5e611c247229ed336cb569bed1185c4c97b03171b56bbe5653  qt-plugin-path.patch
+3d1b8e6f870fc780f9ae8bc6a67eb676a5c5f686dc79e84cd6d64cb3cfafb1be626d0cc3960ffc67cecca21568764a0137c7303a89045fa59f91ba4eb5d8caed  small-sizes.patch"
