community/libmatekbd: upgrade to 1.24.0

--- a/community/libmatekbd/APKBUILD
+++ b/community/libmatekbd/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Alan Lacerda <alacerda@alpinelinux.org>
 # Maintainer: Alan Lacerda <alacerda@alpinelinux.org>
 pkgname=libmatekbd
-pkgver=1.22.0
+pkgver=1.24.0
 pkgrel=0
 pkgdesc="MATE keyboard library"
 url="https://github.com/mate-desktop/libmatekbd"
@@ -10,12 +10,9 @@ license="LGPL-2.1-or-later"
 depends="mate-common freetype"
 makedepends="libxklavier-dev libtool intltool gtk+3.0-dev"
 subpackages="$pkgname-dev $pkgname-lang"
-source="https://pub.mate-desktop.org/releases/${pkgver%.*}/$pkgname-$pkgver.tar.xz
-	install-sh.patch"
-builddir="$srcdir/$pkgname-$pkgver"
+source="https://pub.mate-desktop.org/releases/${pkgver%.*}/libmatekbd-$pkgver.tar.xz"
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -26,14 +23,11 @@ build() {
 }
 
 check() {
-	cd "$builddir"
 	make check
 }
 
 package() {
-	cd "$builddir"
-	make DESTDIR="${pkgdir}" install
+	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="79f19455bb6c0df5a50e445907ac12d6bd92a54cd086e0303890bc67350de3d94b2fd665efdaec85f84a42d76af430ad0a1b9639da078179ac25d27c4a325281  libmatekbd-1.22.0.tar.xz
-2220612dcda2f992ce6e7d8225c3d012497ff297921c24d40853553783c6b0f95c8e25ab0ad3454931e6e104a9951892972c045e4b9e2672cbbe34cd5a0936f3  install-sh.patch"
+sha512sums="6a04f4f38ac1d1ef372fdbaddfe4c935d79039cce1a3d68a6876fa5550556f1d568de1d53857531c6f0bd5994e815f2c9e5be0436218e97718f87e17973ea655  libmatekbd-1.24.0.tar.xz"
