community/libmatemixer: upgrade to 1.24.0

--- a/community/libmatemixer/APKBUILD
+++ b/community/libmatemixer/APKBUILD
@@ -1,16 +1,15 @@
 # Contributor: Alan Lacerda <alacerda@alpinelinux.org>
 # Maintainer: Alan Lacerda <alacerda@alpinelinux.org>
 pkgname=libmatemixer
-pkgver=1.22.0
-pkgrel=1
+pkgver=1.24.0
+pkgrel=0
 pkgdesc="A mixer library for MATE desktop"
 url="https://git.mate-desktop.org/libmatemixer/"
 arch="all"
 license="GPL-2.0-or-later"
 makedepends="intltool glib-dev alsa-lib-dev"
 subpackages="$pkgname-doc $pkgname-dev $pkgname-lang"
-source="https://pub.mate-desktop.org/releases/${pkgver%.*}/$pkgname-$pkgver.tar.xz
-	install-sh.patch"
+source="https://pub.mate-desktop.org/releases/${pkgver%.*}/libmatemixer-$pkgver.tar.xz"
 
 build() {
 	./configure \
@@ -28,8 +27,7 @@ check() {
 }
 
 package() {
-	make DESTDIR="${pkgdir}" install
+	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="6eaa006142601c077ac70739e637273288a4b9713dfc4179341c4832ae4e3b362e92104e150132ee274224d6c5dc057d812b7e1814e49a7690581de6d81e0db8  libmatemixer-1.22.0.tar.xz
-c5b37c91f46ac09fe810cdc040c0cc8b3e457cf23f1fc8965a5e88105b441052772d3b46fd02d6ae35e91c1df81ff4618c9c61319e6ab7314e80243c72222147  install-sh.patch"
+sha512sums="bf8c807bd45f3626bbf881eefa1e4638165daf61637bc63a704492d2a67eeec622e35e58c041649d33411294f96f79c99b3ea2406ae6fcf83294ec625cca9dbf  libmatemixer-1.24.0.tar.xz"
