community/libmateweather: upgrade to 1.24.0

--- a/community/libmateweather/APKBUILD
+++ b/community/libmateweather/APKBUILD
@@ -1,12 +1,12 @@
 # Contributor: Alan Lacerda <alacerda@alpinelinux.org>
 # Maintainer: Alan Lacerda <alacerda@alpinelinux.org>
 pkgname=libmateweather
-pkgver=1.22.1
+pkgver=1.24.0
 pkgrel=0
 pkgdesc="A library to access weather information from online services for numerous locations"
 url="https://github.com/mate-desktop/libmateweather"
 arch="all"
-license="GPL-2.0"
+license="GPL-2.0-or-later"
 depends="mate-common"
 makedepends="libsoup-dev libtool intltool gtk+3.0-dev libxml2-utils tzdata"
 subpackages="$pkgname-dev $pkgname-doc $pkgname-lang"
@@ -30,4 +30,4 @@ package() {
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="c7f5214c14fa3bf6bbb55442ea450c0f3c0a2849e29f72821c22db88baf3763c72dd6d2a27795c23d8ecc69d190a55313f6cfd18dc2a41c233a7e1e5653a0868  libmateweather-1.22.1.tar.xz"
+sha512sums="077a7cbcc75df0a64d9fab23d46154e58cf2455c8a2a17ecc04a8c691ead18b5027e177278a1d8e051ffb76e98bfd8e26ed5ca10ad974546e5446116a4f71300  libmateweather-1.24.0.tar.xz"
