community/mate-icon-theme: upgrade to 1.24.0

--- a/community/mate-icon-theme/APKBUILD
+++ b/community/mate-icon-theme/APKBUILD
@@ -1,15 +1,14 @@
 # Contributor: Alan Lacerda <alacerda@alpinelinux.org>
 # Maintainer: Alan Lacerda <alacerda@alpinelinux.org>
 pkgname=mate-icon-theme
-pkgver=1.22.2
+pkgver=1.24.0
 pkgrel=0
 pkgdesc="MATE desktop icons"
 url="https://github.com/mate-desktop/mate-icon-theme"
 arch="noarch"
-license="GPL-2.0"
+license="GPL-2.0-or-later"
 depends="mate-common"
 makedepends="icon-naming-utils intltool"
-subpackages="$pkgname-lang"
 source="https://pub.mate-desktop.org/releases/${pkgver%.*}/mate-icon-theme-$pkgver.tar.xz"
 
 build() {
@@ -29,4 +28,4 @@ package() {
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="bea4676305b3b26b1a65080d960c33276c1ba30bcd442a200773745b2723700f1ff04affb2483f9c2389475b80700355e85a1fa7fe20c8ee645927d95e0d3b23  mate-icon-theme-1.22.2.tar.xz"
+sha512sums="18ad6a236f02b7536697fed9086eadd997f0c47cc8311324e43641b21ccf942d0dbd52fa6c49623e679d3b23d82619cc256c98d9f8ccc3b3d4cda5d9a6e465f1  mate-icon-theme-1.24.0.tar.xz"
