community/mate-backgrounds: upgrade to 1.24.0

--- a/community/mate-backgrounds/APKBUILD
+++ b/community/mate-backgrounds/APKBUILD
@@ -1,21 +1,17 @@
 # Contributor: Alan Lacerda <alacerda@alpinelinux.org>
 # Maintainer: Alan Lacerda <alacerda@alpinelinux.org>
 pkgname=mate-backgrounds
-pkgver=1.22.0
+pkgver=1.24.0
 pkgrel=0
 pkgdesc="Background images and data for MATE"
 url="https://github.com/mate-desktop/mate-backgrounds"
 arch="noarch"
-license="GPL-2.0"
+license="GPL-2.0-or-later"
 depends="mate-common"
 makedepends="intltool"
-subpackages="$pkgname-lang"
-source="https://pub.mate-desktop.org/releases/${pkgver%.*}/$pkgname-$pkgver.tar.xz
-	install-sh.patch"
-builddir="$srcdir/$pkgname-$pkgver"
+source="https://pub.mate-desktop.org/releases/${pkgver%.*}/mate-backgrounds-$pkgver.tar.xz"
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -25,14 +21,11 @@ build() {
 }
 
 check() {
-	cd "$builddir"
 	make check
 }
 
 package() {
-	cd "$builddir"
-	make DESTDIR="${pkgdir}" install
+	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="b7135cdb20972d50f43026cf98275faaa3c5e41bd0900bca7624a8f9ed03d0ec7f465c78aaf3da534ea6798e8cc690727a1fed8f14b3fb42a8a63bd82858ff30  mate-backgrounds-1.22.0.tar.xz
-2220612dcda2f992ce6e7d8225c3d012497ff297921c24d40853553783c6b0f95c8e25ab0ad3454931e6e104a9951892972c045e4b9e2672cbbe34cd5a0936f3  install-sh.patch"
+sha512sums="29bb18ad77767593c9428c0bbb28da5b2fccab67b71b7d295784c7ec018692f6d5fcdcbae202549650765bc090932cec99a9ec9066d066dc8b4fc6d7347f5905  mate-backgrounds-1.24.0.tar.xz"
