community/mate-utils: upgrade to 1.24.0

--- a/community/mate-utils/APKBUILD
+++ b/community/mate-utils/APKBUILD
@@ -1,13 +1,13 @@
 # Contributor: Alan Lacerda <alacerda@alpinelinux.org>
 # Maintainer: Alan Lacerda <alacerda@alpinelinux.org>
 pkgname=mate-utils
-pkgver=1.22.2
+pkgver=1.24.0
 pkgrel=0
 pkgdesc="Utilities for the MATE Desktop"
 url="https://github.com/mate-desktop/mate-utils"
 arch="all !s390x" # Limited by mate-panel
-license="GPL-2.0"
-makedepends="intltool glib-dev gtk+3.0-dev mate-panel-dev
+license="GPL-2.0-or-later"
+makedepends="intltool glib-dev gtk+3.0-dev mate-panel-dev udisks2-dev
 	libgtop-dev libcanberra-dev inkscape itstool libsm-dev libxml2-utils"
 subpackages="$pkgname-dev $pkgname-doc $pkgname-lang"
 source="https://pub.mate-desktop.org/releases/${pkgver%.*}/mate-utils-$pkgver.tar.xz"
@@ -30,4 +30,4 @@ package() {
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="bf33019ebd1dc4ff6010ba0824981334b7065a62dfc7a73170487df5f165ad20831a900ef4e4e0641ca130aa618f82aa27606f0a48c2cb9907ea7ef118f02a60  mate-utils-1.22.2.tar.xz"
+sha512sums="d8945c85936a55d22f3ed94c9858ba84cadf552a63cdd2d9eec9120111ad71526ac88772f8e4b7a6a460b691574534e52706fba35a0395b1d894b27eece9e92c  mate-utils-1.24.0.tar.xz"
