community/mate-terminal: upgrade to 1.24.0

--- a/community/mate-terminal/APKBUILD
+++ b/community/mate-terminal/APKBUILD
@@ -1,18 +1,17 @@
 # Contributor: Alan Lacerda <alacerda@alpinelinux.org>
 # Maintainer: Alan Lacerda <alacerda@alpinelinux.org>
 pkgname=mate-terminal
-pkgver=1.22.1
+pkgver=1.24.0
 pkgrel=0
 pkgdesc="MATE terminal emulator"
 url="https://github.com/mate-desktop/mate-terminal"
 arch="all !s390x" # mate-desktop
-license="GPL-2.0"
+license="GPL-2.0-or-later"
 depends="mate-common yelp-tools mate-desktop"
 makedepends="libtool intltool dconf-dev libsm-dev itstool vte3-dev
 	mate-desktop-dev libxml2-utils gtk+3.0-dev"
 subpackages="$pkgname-doc $pkgname-lang"
-source="https://pub.mate-desktop.org/releases/${pkgver%.*}/$pkgname-$pkgver.tar.xz"
-builddir="$srcdir/$pkgname-$pkgver"
+source="https://pub.mate-desktop.org/releases/${pkgver%.*}/mate-terminal-$pkgver.tar.xz"
 
 build() {
 	./configure \
@@ -29,7 +28,7 @@ check() {
 }
 
 package() {
-	make DESTDIR="${pkgdir}" install
+	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="b20102c15dc140b59c93802606ca94fd108dfd5f7ac7f079b872e957794fc2c3aab40c0e6da697e8d393a67fca7b106573a4cb8014af5d6c8ad777be3a798534  mate-terminal-1.22.1.tar.xz"
+sha512sums="2ad25411a8e720d3ef43964dc9f80732e215b1b5154e904069d25e73910c0c8f0e1b100d21f85b9a1eec06f6b17f891791445f7830bb52fc44b67fa3f8cebf76  mate-terminal-1.24.0.tar.xz"
