--- a/community/mate-screensaver/APKBUILD
+++ b/community/mate-screensaver/APKBUILD
@@ -1,22 +1,21 @@
 # Contributor: Alan Lacerda <alacerda@alpinelinux.org>
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=mate-screensaver
-pkgver=1.22.2
+pkgver=1.24.0
 pkgrel=0
 pkgdesc="A screen saver and locker for MATE"
 url="https://github.com/mate-desktop/mate-screensaver"
 arch="all !s390x" # mate-desktop
-license="GPL-2.0"
+license="GPL-2.0-or-later"
 makedepends="intltool glib-dev libxscrnsaver-dev gtk+3.0-dev
 	mate-desktop-dev dbus-glib-dev mate-menus-dev dconf-dev
 	libnotify-dev libmatekbd-dev mate-session-manager libsm-dev"
 subpackages="$pkgname-dev $pkgname-doc $pkgname-lang"
-source="https://pub.mate-desktop.org/releases/${pkgver%.*}/$pkgname-$pkgver.tar.xz"
+source="https://pub.mate-desktop.org/releases/${pkgver%.*}/mate-screensaver-$pkgver.tar.xz"
 builddir="$srcdir/$pkgname-$pkgver/"
 options="suid"
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -29,16 +28,14 @@ build() {
 }
 
 check() {
-	cd "$builddir"
 	make check
 }
 
 package() {
-	cd "$builddir"
-	make DESTDIR="${pkgdir}" install
+	make DESTDIR="$pkgdir" install
 
 	# https://gitweb.gentoo.org/repo/gentoo.git/tree/mate-extra/mate-screensaver
 	chmod u+s "$pkgdir"/usr/libexec/mate-screensaver-dialog
 }
 
-sha512sums="6d28f7261556d59af0bdb8c59ac13fc042c9c5b4cce47e7f6d4148041eb7f05d5cb062f85f05dddb51d009e4aebac31c21fc1243c0e07813adc050fede134ef3  mate-screensaver-1.22.2.tar.xz"
+sha512sums="8947b85ab8b006a1756649131a9184e4eb8f44c563f5a1b55840aa8280820713bca1ce46fece92b5ac44a73193bfe965e8ef0d17e8e403a751807ee72c674cc0  mate-screensaver-1.24.0.tar.xz"
