community/mate-polkit: upgrade to 1.24.0

--- a/community/mate-polkit/APKBUILD
+++ b/community/mate-polkit/APKBUILD
@@ -1,22 +1,19 @@
 # Contributor: Alan Lacerda <alacerda@alpinelinux.org>
 # Maintainer: Alan Lacerda <alacerda@alpinelinux.org>
 pkgname=mate-polkit
-pkgver=1.22.0
+pkgver=1.24.0
 pkgrel=0
 pkgdesc="MATE Authentication Agent for PolicyKit"
 url="https://github.com/mate-desktop/mate-polkit"
 arch="all"
-license="GPL-2.0"
+license="GPL-2.0-or-later"
 depends="mate-common"
 makedepends="polkit-dev libtool intltool gtk+3.0-dev
 	gobject-introspection-dev"
 subpackages="$pkgname-lang"
-source="https://pub.mate-desktop.org/releases/${pkgver%.*}/$pkgname-$pkgver.tar.xz
-	install-sh.patch"
-builddir="$srcdir/$pkgname-$pkgver"
+source="https://pub.mate-desktop.org/releases/${pkgver%.*}/mate-polkit-$pkgver.tar.xz"
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -27,14 +24,11 @@ build() {
 }
 
 check() {
-	cd "$builddir"
 	make check
 }
 
 package() {
-	cd "$builddir"
-	make DESTDIR="${pkgdir}" install
+	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="e761ec10842789b5bbb3831f568c64e969429131a893850e8323927b949e115a24b3907fd3def7f31f5f785f0831717d852c61f08a9028a009ea9cca0ba86393  mate-polkit-1.22.0.tar.xz
-2220612dcda2f992ce6e7d8225c3d012497ff297921c24d40853553783c6b0f95c8e25ab0ad3454931e6e104a9951892972c045e4b9e2672cbbe34cd5a0936f3  install-sh.patch"
+sha512sums="8d759bd5f78750c75dc92ffa27e555ae36ae7199b76483cbfe7e0848d3a66cda5b82c98bf334068eb79a1344757665cf7d1bf403e4e908e332ca929c8ebe2a98  mate-polkit-1.24.0.tar.xz"
