community/mate-menus: upgrade to 1.24.0

--- a/community/mate-menus/APKBUILD
+++ b/community/mate-menus/APKBUILD
@@ -1,12 +1,12 @@
 # Contributor: Alan Lacerda <alacerda@alpinelinux.org>
 # Maintainer: Alan Lacerda <alacerda@alpinelinux.org>
 pkgname=mate-menus
-pkgver=1.22.1
+pkgver=1.24.0
 pkgrel=0
 pkgdesc="The libmate-menu library, the layout configuration files for the MATE menu, as well as a simple menu editor"
 url="https://github.com/mate-desktop/mate-menus"
 arch="all"
-license="GPL-2.0"
+license="GPL-2.0-or-later"
 depends="mate-common"
 makedepends="libtool intltool glib-dev gobject-introspection-dev"
 subpackages="$pkgname-dev $pkgname-lang"
@@ -29,4 +29,4 @@ package() {
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="2766cafa35c11da6f6d5d6129a5e39c09e73ca97f72382df757091198260a342d278c53f88cddf75e174231443c1015198dfa1800b3601d5b770553ec7047a00  mate-menus-1.22.1.tar.xz"
+sha512sums="27f8ba0666b08fbcfc3f02a42e4b9f3d3431e3d171be0fe9569f412b2f9ead370fff15833feb920b64d2a067e81354970df2ee1c465f10faa3dbd9c97af20406  mate-menus-1.24.0.tar.xz"
