--- a/community/mate-media/APKBUILD
+++ b/community/mate-media/APKBUILD
@@ -1,12 +1,12 @@
 # Contributor: Alan Lacerda <alacerda@alpinelinux.org>
 # Maintainer: Alan Lacerda <alacerda@alpinelinux.org>
 pkgname=mate-media
-pkgver=1.22.2
+pkgver=1.24.0
 pkgrel=0
 pkgdesc="Media tools for MATE"
 url="https://github.com/mate-desktop/mate-media"
 arch="all !s390x" # Limited by mate-panel
-license="GPL-2.0"
+license="GPL-2.0-or-later"
 makedepends="intltool gobject-introspection-dev gtk+3.0-dev
 	libcanberra-dev libunique-dev libmatemixer-dev mate-desktop-dev
 	mate-panel-dev dconf-dev libxml2-dev startup-notification-dev"
@@ -31,4 +31,4 @@ package() {
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="88a78e7ddf02335ffe4d819921cbb978b9e2fc430e0edd950f04edb3999f94d59c4aa39a8089ac0c66af6b152b1514e20810ae4c577095dcd60735046a88ec3a  mate-media-1.22.2.tar.xz"
+sha512sums="82ee6a16a49d9f4d229539cfacb5803c150af09dff227fb5995bf78e2b83a1f5bddb307756648e569a138124e4485ca56f635184e47fbfd76dcedd17f2bf0425  mate-media-1.24.0.tar.xz"
