--- a/community/mate-desktop/APKBUILD
+++ b/community/mate-desktop/APKBUILD
@@ -1,12 +1,12 @@
 # Contributor: Alan Lacerda <alacerda@alpinelinux.org>
 # Maintainer: Alan Lacerda <alacerda@alpinelinux.org>
 pkgname=mate-desktop
-pkgver=1.22.2
+pkgver=1.24.0
 pkgrel=0
 pkgdesc="The MATE Desktop Environment"
 url="https://wiki.mate-desktop.org/mate-desktop"
 arch="all !s390x" # librsvg
-license="GPL-2.0-or-later LGPL-2.0-or-later"
+license="GPL-2.0-or-later AND LGPL-2.0-or-later"
 depends="mate-common yelp-tools"
 makedepends="startup-notification itstool intltool dconf-dev gtk+3.0-dev
 	libxrandr-dev libxml2-utils iso-codes-dev librsvg"
@@ -31,4 +31,4 @@ package() {
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="d2e965f9e26e4fe25337a4ef69521239388f38cff25e978331a307591555d8a9ff22d6a19ef3c92cf336c472fbfb231969ef5ac60e3a4c5908a81ded1e5f0f46  mate-desktop-1.22.2.tar.xz"
+sha512sums="ca60325e7f6167efd21bdd32ae40c2f2bf5ae9bef85f0a43afec05d50567fb650fc0426d94c510b3a42c625dc4b2d31d7559befa50cfbb6d9878635558a52323  mate-desktop-1.24.0.tar.xz"
