community/mate-notification-daemon: upgrade to 1.24.0

--- a/community/mate-notification-daemon/APKBUILD
+++ b/community/mate-notification-daemon/APKBUILD
@@ -1,12 +1,12 @@
 # Contributor: Alan Lacerda <alacerda@alpinelinux.org>
 # Maintainer: Alan Lacerda <alacerda@alpinelinux.org>
 pkgname=mate-notification-daemon
-pkgver=1.22.1
+pkgver=1.24.0
 pkgrel=0
 pkgdesc="Small, passive popup dialogs that notify the user of particular events"
 url="https://github.com/mate-desktop/mate-notification-daemon"
 arch="all"
-license="GPL-2.0"
+license="GPL-2.0-or-later"
 depends="mate-common"
 makedepends="libwnck3-dev libnotify-dev libtool intltool dbus-glib-dev
 	libcanberra-dev gtk+3.0-dev"
@@ -31,4 +31,4 @@ package() {
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="5faec84a2c25b3d17db5e0e564081a5712a0ae9a648b61e7d6233f7c6671a137cb9e0d2328eccad4e634eb99cae72cf235589f3667b9bf29e66c3734f7ed8bc7  mate-notification-daemon-1.22.1.tar.xz"
+sha512sums="0fd2da98001c60672d4833e974ac74dd561f54ca6f3fd74f8d6620e3b28768add46dd891d7446b01426b6aed09d4966d902cbde45aac3498fdcbb837e531a147  mate-notification-daemon-1.24.0.tar.xz"
