--- a/community/mate-power-manager/APKBUILD
+++ b/community/mate-power-manager/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Alan Lacerda <alacerda@alpinelinux.org>
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=mate-power-manager
-pkgver=1.22.2
+pkgver=1.24.0
 pkgrel=0
 pkgdesc="A Power Manager for MATE"
 url="https://github.com/mate-desktop/mate-power-manager"
@@ -9,9 +9,10 @@ arch="all !s390x" # mate-desktop
 license="GPL-2.0-or-later"
 makedepends="$depends_dev intltool gettext-dev itstool glib-dev libcanberra-dev
 	dbus-glib-dev mate-desktop-dev dconf-dev libnotify-dev libunique-dev
-	upower-dev libgnome-keyring-dev mate-panel-dev harfbuzz-dev"
+	upower-dev libgnome-keyring-dev mate-panel-dev harfbuzz-dev
+	polkit-dev"
 subpackages="$pkgname-doc $pkgname-lang"
-source="https://pub.mate-desktop.org/releases/${pkgver%.*}/$pkgname-$pkgver.tar.xz
+source="https://pub.mate-desktop.org/releases/${pkgver%.*}/mate-power-manager-$pkgver.tar.xz
 	0001-execinfo-patch.patch
 	0001-removing-backtrace.patch
 	0001-get_nprocs-patch.patch
@@ -32,10 +33,10 @@ check() {
 }
 
 package() {
-	make DESTDIR="${pkgdir}" install
+	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="99a273558c072ce1d23c8964d9292f45a29a2d5a5e89b504e79e3686a65ad8cc7b200441ba22147d3d828f574e2cebc260c47531338e286b2c47988263763af6  mate-power-manager-1.22.2.tar.xz
+sha512sums="6194d1156a004c1006b3b0b5d50a4def5e6d07df5229aafac487843e4e544e144b85e2a9b45ee0b932b8de9a6969aa844f8f61ac607f9f5e6234fd4ff5d8a4d5  mate-power-manager-1.24.0.tar.xz
 f7c97099144a077d00d0dbee0ed148fb7a82ea902a31b4607b3b37b07d26530dc06695c9ff9565ba457f754c2093610efa46965d0d28329cd23a7a061f1b4249  0001-execinfo-patch.patch
 76364f42dbeceb0c13e957e83fe40873cc93f2d83497b658419765ea736a50f436515347960f5f30a021b55aef670fddce04787c892509b8c54995512a5dc1b7  0001-removing-backtrace.patch
 76d93fb1313e3fabbd333d9ccb3a97907cea5292150aecf813ca32f4e434eab69f337ff7578ce3d0e940bb8fad28d1b13264bd6130cdaea7de618104c5826779  0001-get_nprocs-patch.patch"
